<resources>
    <string name="app_name">module_home</string>
    <string name="customers_title">%s-%s-%s</string>
    <string name="customers_childTitle">%sm² %s %s/%s</string>
    <string name="createUser">%s  %s</string>
    <string name="latestFollowTime">最后跟进: %s</string>
    <string name="max_value">最大值</string>
    <string name="min_value">最小值</string>
    <string name="floor_btn">@string/sure</string>
    <string name="dao">—</string>
    <string name="floor">层</string>
    <string name="wan">万</string>
    <string name="minfloor_maxfloor">%s-%s</string>
    <string name="minprice_maxprice">%s-%s万</string>
    <string name="reset">重置</string>
    <string name="sure">确认</string>
    <string name="house_detail">房源详情</string>
    <string name="house_detail_right_title">更多</string>
    <string name="more_result_numSelected">%s项选中</string>
    <string name="house_owners">房源相关人</string>
    <string name="photo_refs">图片相关</string>
    <string name="house_photo">房屋图片</string>
    <string name="refer_photo">产权图片</string>
    <string name="community_location">小区位置</string>
    <string name="supporting_facility">配套设施</string>
    <string name="house_follow">房源跟进</string>
    <string name="take_look">带看</string>
    <string name="take_look_record">带看记录</string>
    <string name="log">日志</string>
    <string name="new_insert">新增</string>

    <string name="more_update">修改</string>
    <string name="more_house_photo">上传房屋图</string>
    <string name="more_refers">上传产权图</string>
    <string name="more_update_status">修改状态</string>
    <string name="more_circulate">流通</string>
    <string name="more_edit_info">编辑信息</string>
    <string name="more_new_phone">新增电话</string>
    <string name="more_customer">客户档案</string>
    <string name="more_share">分享</string>

    <string name="heSold">他售</string>
    <string name="selfSold">我售</string>
    <string name="effective">有效</string>
    <string name="defer">暂缓</string>

    <string name="Circulate">流通</string>
    <string name="NoCirculate">不流通</string>

    <string name="input_phone_tip">请输入有效的电话号码</string>
    <string name="cancel">取消</string>

    <string name="OwnerInfo">业主信息</string>
    <string name="OwnerNick">业主姓名</string>
    <string name="OwnerPhone">业主电话</string>
    <string name="inputOwnerNick">请输入业主 姓名</string>
    <string name="inputOwnerPhone">请输入业主 电话</string>
    <string name="finish">完成</string>
    <string name="prompt">提示</string>
    <string name="setImageUserTip">此次上传是否设置本人为图片人?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="Alter">修改</string>
    <string name="solePrice">售价</string>
    <string name="solePrice_input_tip">请输入 售价</string>
    <string name="transaction_type">交易类型</string>
    <string name="select_transaction_type">请选择 交易类型</string>
    <string name="Village">小区</string>
    <string name="select_Village">请选择 小区</string>
    <string name="rent">租价</string>
    <string name="input_rent">请输入 租价</string>
    <string name="buy_price">买入价</string>
    <string name="input_buy_price">请输入 买入价</string>

    <string name="reserve_price">房东底价</string>
    <string name="input_reserve_price">请输入 房东底价</string>
    <string name="unit_price">单价</string>
    <string name="input_unit_price">请输入 单价</string>

    <string name="building">座栋</string>
    <string name="building_input">请输入 座栋</string>
    <string name="rNumber">房号</string>
    <string name="rNumber_input">请输入 房号</string>
    <string name="groundFloor">楼层</string>
    <string name="groundFloor_input">请输入 楼层</string>
    <string name="totalFloors">总楼层</string>
    <string name="totalFloors_input">请输入 总楼层</string>
    <string name="floorage">建筑面积</string>
    <string name="floorage_input">请输入 建筑面积</string>
    <string name="room">室</string>
    <string name="room_input">请输入 室</string>
    <string name="hall">厅</string>
    <string name="hall_input">请输入 厅</string>
    <string name="defend">卫</string>
    <string name="defend_input">请输入 卫</string>
    <string name="Mortgage_or_not">是否抵押</string>
    <string name="Mortgaged_or_not">是否有抵押</string>
    <string name="orientation">房屋朝向</string>
    <string name="At_least_five">满五唯一</string>
    <string name="ladder">梯</string>
    <string name="household">户</string>
    <string name="look_time">看房时间</string>
    <string name="look_time_input">请输入 看房时间</string>
    <string name="Construction_period">建筑年限</string>
    <string name="Construction_period_input">请输入 建筑年限</string>
    <string name="decoration">装修情况</string>
    <string name="decoration_input">请输入 装修情况</string>
    <string name="property_owners">产权几人</string>
    <string name="property_owners_input">请输入 产权人数</string>
    <string name="buy_reasons">买房原因</string>
    <string name="buy_reasons_input">请输入 买房原因</string>
    <string name="rewarks_input">请输入 备注</string>
    <string name="rewark">备注</string>

    <string name="wan_yuan">万元</string>
    <string name="yuan">元</string>
    <string name="commit_successful">提交成功</string>
    <string name="follow_content">跟进内容</string>
    <string name="follow_content_input">请输入 跟进内容</string>
    <string name="takelook_house">带看房源</string>
    <string name="takelook_house_input">请选择 带看房源</string>
    <string name="takelook_time">带看时间</string>
    <string name="takelook_time_input">请选择 带看时间</string>
    <string name="takelooker">带看人</string>
    <string name="takelooker_input">请选择 带看人</string>
    <string name="lookAccompany">陪看人</string>
    <string name="lookAccompany_input">请选择 陪看人</string>
    <string name="customer_follow">A跟进</string>
    <string name="customer_follow_input">请输入 A跟进</string>

    <string name="phone_log">电话日志</string>
    <string name="house_num">房源数量</string>
    <string name="buy_num">求购数量</string>
    <string name="rent_num">求租数量</string>
    <string name="setTop">置顶</string>
    <string name="tao">淘</string>
    <string name="near">周边</string>
    <string name="insert_house">新增房源</string>
    <string name="scan">扫一扫</string>
    <string name="nick">姓名</string>
    <string name="nick_input">请输入 姓名</string>
    <string name="phone">电话</string>
    <string name="phone1">电话1</string>
    <string name="phone2">电话2</string>
    <string name="phone_input">请输入 电话</string>
    <string name="phone1_input">请输入 电话1</string>
    <string name="phone2_input">请输入 电话2</string>
    <string name="select_house">房源选择</string>
    <string name="search">搜索</string>
    <string name="community_name">小区名称</string>
    <string name="community_input">请输入 小区名称</string>
    <string name="houseCode">房源编号</string>
    <string name="houseCode_input">请输入 房源编号</string>
    <string name="schoolIds">学区</string>
    <string name="schoolIds_input">请选择 学区</string>
    <string name="createUsers">录入人</string>
    <string name="imageUsers">图片人</string>
    <string name="imageUsers_input">请选择 图片人</string>
    <string name="createUsers_input">请选择 录入人</string>
    <string name="maintainUsers">维护人</string>
    <string name="maintainUsers_input">请选择 维护人</string>
    <string name="blockUsers">封盘人</string>
    <string name="blockUsers_input">请选择 封盘人</string>
    <string name="haveKeyUsers">钥匙人</string>
    <string name="haveKeyUsers_input">请选择 钥匙人</string>
    <string name="soleUsers">独家人</string>
    <string name="soleCode">独家编号</string>
    <string name="soleCode_input">请输入 独家编号</string>
    <string name="soleUsers_input">请选择 独家人</string>
    <string name="setEntrustUser">设置委托人</string>
    <string name="setSoleUser">设置独家人</string>
    <string name="entrustUser">委托人</string>
    <string name="entrustUser_input">请选择 委托人</string>
    <string name="estateType">房产类型</string>
    <string name="estateType_input">请选择 房产类型</string>
    <string name="brokerUser">居间方</string>
    <string name="brokerUser_input">请输入 居间方</string>
    <string name="district">区</string>
    <string name="district_input">请输入 区</string>
    <string name="startTime">开始时间</string>
    <string name="startTime_input">请输入 开始时间</string>
    <string name="endTime">结束时间</string>
    <string name="endTime_input">请输入 结束时间</string>
    <string name="soleTotalPrice">独家总额</string>
    <string name="soleTotalPrice_input">请输入 独家总额</string>
    <string name="road">路</string>
    <string name="road_input">请输入 路</string>
    <string name="lane">弄</string>
    <string name="lane_input">请输入 弄</string>
    <string name="number">号</string>
    <string name="number_input">请输入 号</string>
    <string name="carportNum">车位</string>
    <string name="carportNum_input">请输入 车位</string>
    <string name="powerUser">权利人</string>
    <string name="powerUser_input">请输入 权利人</string>
    <string name="decorat">装修</string>
    <string name="decorat_input">请输入 装修</string>
    <string name="facility">附属设施</string>
    <string name="facility_input">请输入 附属设施</string>
    <string name="isMortgage">是否抵押</string>
    <string name="isMortgage_input">请输入 是否抵押</string>
    <string name="mortgageUser">抵押人</string>
    <string name="mortgageUser_input">请输入 抵押人</string>
    <string name="mortgageBalance">抵押金额</string>
    <string name="mortgageBalance_input">请输入 抵押金额</string>
    <string name="isLease">是否租赁</string>
    <string name="isLease_input">请输入 是否租赁</string>
    <string name="housePrice">房款价</string>
    <string name="housePrice_input">请输入 房款价</string>
    <string name="create_copy">创建并复制</string>
    <string name="SetKey">设置钥匙</string>

    <string name="HasKeyuser">得钥匙人</string>
    <string name="HasKeyuser_input">请选择 得钥匙人</string>

    <string name="haveKeyTime">拿钥匙时间</string>
    <string name="haveKeyTime_input">请选择 拿钥匙时间</string>
    <string name="keyCode">钥匙编号</string>
    <string name="keyCode_input">请输入 钥匙编号</string>
    <string name="keyPassword">钥匙密码</string>
    <string name="keyPassword_input">请输入 钥匙密码</string>
    <string name="receipt">钥匙收据</string>
    <string name="receipt_input">请输入 钥匙收据</string>
    <string name="keyImage">钥匙图片</string>

    <string name="entrustUsers">委托人</string>
    <string name="entrustUsers_input">请选择 委托人</string>
    <string name="bargainPriceUsers">推荐人</string>
    <string name="bargainPriceUsers_input">请选择 推荐人</string>

    <string name="houseDetailURL">%s%s/uid/%s/ip/%s</string>

</resources>
