<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kotlin.base.widgets.HeaderBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:isShowBack="true"
        app:titleText="@string/insert_house" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:id="@+id/llAddHouse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nsvTransactionType"
                style="@style/MatchWrap"
                app:leftTitleText="@string/transaction_type"
                app:isNecessary="true"
                app:isShowLine="true"
                app:tipContentText="@string/select_transaction_type"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nsvVillage"
                style="@style/MatchWrap"
                app:leftTitleText="@string/Village"
                app:isNecessary="true"
                app:isShowLine="true"
                app:tipContentText="@string/select_Village"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivfloorage"
                app:leftTitleText="@string/floorage"
                style="@style/MatchWrap"
                app:isShowLine="true"
                app:inputType="numberDecimal"
                app:tipContentText="@string/floorage_input"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivSalePrice"
                app:leftTitleText="@string/solePrice"
                style="@style/MatchWrap"
                app:unit="@string/wan_yuan"
                app:isShowLine="true"
                app:inputType="numberDecimal"
                app:tipContentText="@string/solePrice_input_tip"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivrent"
                app:leftTitleText="@string/rent"
                style="@style/MatchWrap"
                app:isShowLine="true"
                app:inputType="numberDecimal"
                app:unit="@string/yuan"
                app:tipContentText="@string/input_rent"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivbuilding"
                app:leftTitleText="@string/building"
                app:isNecessary="true"
                app:isShowLine="true"
                app:inputType="number"
                app:tipContentText="@string/building_input"
                style="@style/MatchWrap"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivrNumber"
                app:leftTitleText="@string/rNumber"
                app:isNecessary="true"
                app:maxLength="4"
                app:isShowLine="true"
                app:tipContentText="@string/rNumber_input"
                style="@style/MatchWrap"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivName"
                app:leftTitleText="@string/nick"
                app:isNecessary="true"
                app:isShowLine="true"
                app:inputType="text"
                style="@style/MatchWrap"
                app:tipContentText="@string/nick_input"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivgroundFloor"
                app:leftTitleText="@string/groundFloor"
                app:isShowLine="true"
                app:inputType="number"
                style="@style/MatchWrap"
                app:tipContentText="@string/groundFloor_input"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivtotalFloors"
                app:leftTitleText="@string/totalFloors"
                app:isShowLine="true"
                app:inputType="number"
                style="@style/MatchWrap"
                app:tipContentText="@string/totalFloors_input"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivroom"
                app:leftTitleText="@string/room"
                app:isShowLine="true"
                style="@style/MatchWrap"
                app:inputType="number"
                app:tipContentText="@string/room_input"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivhall"
                app:leftTitleText="@string/hall"
                app:isShowLine="true"
                app:inputType="number"
                style="@style/MatchWrap"
                app:tipContentText="@string/hall_input"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivdefend"
                app:leftTitleText="@string/defend"
                style="@style/MatchWrap"
                app:isShowLine="true"
                app:inputType="number"
                app:tipContentText="@string/defend_input"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivPhone"
                app:leftTitleText="@string/phone"
                app:isNecessary="true"
                style="@style/MatchWrap"
                app:isShowLine="true"
                app:inputType="number"
                app:tipContentText="@string/phone_input"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivPhone1"
                app:leftTitleText="@string/phone1"
                app:isNecessary="false"
                style="@style/MatchWrap"
                app:isShowLine="true"
                app:inputType="number"
                app:tipContentText="@string/phone1_input"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivPhone2"
                app:leftTitleText="@string/phone2"
                app:isNecessary="false"
                style="@style/MatchWrap"
                app:isShowLine="true"
                app:inputType="number"
                app:tipContentText="@string/phone2_input"/>
            <TextView
                android:id="@+id/tvAddHouse"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_33"
                android:textSize="@dimen/sp_15"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:text="@string/new_insert"
                android:layout_marginBottom="@dimen/dp_24"
                android:background="@drawable/common_maincolor_radius_bg"
                android:layout_height="@dimen/dp_44"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>

