<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kotlin.base.widgets.HeaderBar
        android:id="@+id/set_houseinfo_titleBar"
        style="@style/MatchWrap"
        android:background="@color/main_color"
        app:isShowBack="true"
        app:rightText="@string/sure"
        app:titleText="@string/search" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llsearchHouse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivVillageName"
                app:leftTitleText="@string/community_name"
                app:isShowLine="true"
                app:tipContentText="@string/community_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivOwnerTel"
                app:leftTitleText="@string/OwnerPhone"
                app:isShowLine="true"
                app:inputType="phone"
                app:tipContentText="@string/inputOwnerPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivHouseCode"
                app:leftTitleText="@string/houseCode"
                app:isShowLine="true"
                app:tipContentText="@string/houseCode_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivBuilding"
                app:leftTitleText="@string/building"
                app:isShowLine="true"
                app:tipContentText="@string/building_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nivHNum"
                app:leftTitleText="@string/rNumber"
                app:isShowLine="true"
                app:tipContentText="@string/rNumber_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nivSchoolIds"
                app:leftTitleText="@string/schoolIds"
                app:isShowLine="true"
                app:tipContentText="@string/schoolIds_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nivCreateUsers"
                app:leftTitleText="@string/createUsers"
                app:isShowLine="true"
                app:tipContentText="@string/createUsers_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nivImageUsers"
                app:leftTitleText="@string/imageUsers"
                app:isShowLine="true"
                app:tipContentText="@string/imageUsers_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nivMaintainUsers"
                app:leftTitleText="@string/maintainUsers"
                app:isShowLine="true"
                app:tipContentText="@string/maintainUsers_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nivBargainPriceUsers"
                app:leftTitleText="@string/bargainPriceUsers"
                app:isShowLine="true"
                app:tipContentText="@string/bargainPriceUsers_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nivBlockUsers"
                app:leftTitleText="@string/blockUsers"
                app:isShowLine="true"
                app:tipContentText="@string/blockUsers_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nivHaveKeyUsers"
                app:leftTitleText="@string/haveKeyUsers"
                app:isShowLine="true"
                app:tipContentText="@string/haveKeyUsers_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nivSoleUsers"
                app:leftTitleText="@string/soleUsers"
                app:isShowLine="true"
                app:tipContentText="@string/soleUsers_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nivEntrustUsers"
                app:leftTitleText="@string/entrustUsers"
                app:isShowLine="true"
                app:tipContentText="@string/entrustUsers_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
